# LibrePOS

./: .claude.local.md  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATABASE_CONFIGURATION.md  ENVIRONMENT_CONFIGURATION.md  INSTALLATION.md  POS_FEATURES.md  README.md  build.mjs  librepos.db  package-lock.json  package.json  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: code-quality.yaml
docs/: PRD.md  api-spec.yaml  api.md  architecture.md  components.md  database-schema.md  roadmap.md  uiux.md
docs/api/: auth.md  customers.md  integrations.md  inventory.md  kitchen.md  menu.md  orders.md  payments.md  reporting.md  staff.md  tables.md
docs/architecture/: blueprints.md  configuration.md  database.md  static-assets.md  templates.md  testing.md
docs/components/: action-bar.md  badges.md  buttons.md  dropdown.md  forms.md  icons.md  layout.md  modals.md
docs/database-schema/: auth.md  customers.md  indexes.md  integrations.md  inventory.md  kitchen.md  menu.md  orders.md  payments.md  reporting.md  staff.md  tables.md
docs/guides/: database.md  environment.md  installation.md
docs/plans/: 2026-01-23-dark-theme-restaurant-design.md  2026-01-23-flexbox-utilities-design.md  2026-01-23-grid-utilities-design.md  2026-01-23-light-theme-restaurant-design.md  2026-01-23-materialize-color-themes-design.md  2026-01-23-materialize-color-themes.md  2026-01-24-apps-dropdown-redesign.md  2026-01-24-apps-dropdown-squircle-tiles-design.md  2026-01-24-font-size-utilities-design.md
docs/prd/: architecture.md  authentication.md  cli-commands.md  data-models.md  frontend.md  implementation-phases.md  technology-stack.md
docs/uiux/: accessibility.md  components.md  conventions.md  design-system.md  performance.md  touch-responsive.md
librepos/: .env.sample  __init__.py  app.py  cli.py  config.py  extensions.py  manage.py  router.py  routes.py  seed_db.py  seeds.py  urls.py  utils.py
librepos/app/: __init__.py  cli.py  config.py  extensions.py
librepos/app/blueprints/: __init__.py
librepos/app/shared/: export.py  images.py  pagination.py
librepos/app/static/: manifest.json
librepos/app/templates/: base.html  offline.html  welcome.html
librepos/auth/: config.py  controllers.py  decorators.py  forms.py  models.py  repositories.py  repository.py  routes.py  service.py  services.py  views.py
librepos/blueprints/: __init__.py
librepos/blueprints/auth/: controllers.py  forms.py  models.py  routes.py  services.py
librepos/blueprints/dashboard/: controller.py  routes.py
librepos/blueprints/user/: controller.py  controllers.py  forms.py  models.py  repositories.py  routes.py  services.py
librepos/blueprints/users/: controllers.py  forms.py  models.py  repositories.py  services.py
librepos/cli/: manage.py  seeds.py
librepos/cli/fixtures/: __init__.py  permission_utils.py  permissions.py  policies.py  roles.py
librepos/common/: base_repository.py  base_service.py  enums.py  forms.py
librepos/controllers/: auth_controller.py  iam_controller.py  menu_controller.py  order_controller.py  settings_controller.py  user_controller.py
librepos/core/: app.py  database.py  extensions.py  repository.py
librepos/data/: init_data.py  sample_data.py
librepos/error/: forms.py  models.py  routes.py  views.py
librepos/features/: __init__.py  routes.py  urls.py
librepos/features/auth/: decorators.py  forms.py  routes.py  services.py
librepos/features/branches/: routes.py
librepos/features/core/: routes.py
librepos/features/error/: routes.py
librepos/features/iam/: forms.py  models.py  permissions.py  repositories.py  routes.py  services.py
librepos/features/main/: routes.py  urls.py  views.py
librepos/features/orders/: routes.py
librepos/fixtures/: __init__.py  permissions.py  policies.py  roles.py
librepos/forms/: __init__.py  base.py  login_form.py  menu_category_form.py  menu_group_form.py  user_contac_details_form.py  user_login_form.py  user_registration_form.py
librepos/iam/: decorators.py  email.py  forms.py  models.py  permissions.py  queries.py  routes.py  utils.py  views.py
librepos/main/: app.py  config.py  extensions.py  forms.py  librepos.db  permissions.py  repository.py  routes.py  service.py  views.py
librepos/menu/: forms.py  repository.py  routes.py  service.py
librepos/models/: __init__.py  menu_categories.py  menu_groups.py  menu_items.py  permissions.py  policies.py  policy_permissions.py  products.py  restaurant.py  role.py  role_policies.py  roles.py  shop_order_items.py  shop_orders.py  system_settings.py  user.py  user_activity.py  user_profile.py  users.py
librepos/order/: repository.py  routes.py  service.py
librepos/permissions/: __init__.py  registry.py  seeder.py
librepos/products/: forms.py  repository.py  routes.py  service.py
librepos/repositories/: __init__.py  entity_repo.py  menu_category_repo.py  menu_group_repo.py  menu_item_repo.py  order_item_repo.py  order_repo.py  policy_repo.py  restaurant_repo.py  role_policies_repo.py  role_repo.py  system_settings_repo.py  user_repository.py
librepos/routes/: auth.py  dashboard.py
librepos/services/: __init__.py  auth_service.py  iam_service.py  menu_category_service.py  menu_group_service.py  menu_item_service.py  order_item_service.py  order_service.py  permission_service.py  restaurant_service.py  system_settings_service.py  user_service.py
librepos/settings/: forms.py  routes.py  service.py
librepos/staff/: forms.py  models.py  permissions.py  routes.py  views.py
librepos/user/: forms.py  routes.py
librepos/users/: controllers.py  forms.py  models.py  repositories.py  repository.py  routes.py  service.py  services.py
librepos/utils/: __init__.py  datetime.py  decorators.py  enums.py  financial.py  form.py  formatters.py  helpers.py  images.py  jinja.py  message_handlers.py  messages.py  model_utils.py  navigation.py  sqlalchemy.py  string.py  validators.py
scripts/: README.md  create_blueprint.py
src/librepos/: __init__.py  wsgi.py
tests/: conftest.py  test_project_routes.py
tests/unit/: test_placeholder.py
(+462 files in other folders)
