[project]
name = "librepos"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "better-profanity>=0.7.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-mailman>=1.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
    "python-usernames>=1.0.0",
    "pytz>=2025.1",
]
