[project]
name = "librepos"
version = "1.0.0.dev2"
description = "LibrePOS is an open-source, web-based Point of Sale system for restaurants and mobile food vendors. Built with Flask, MaterializeCSS, and HTMX, it offers product management, order tracking, and user authentication. "
authors = [
    { name = "BaezFJ", email = "baezdevs@gmail.com" }
]
maintainers = [
    { name = "BaezFJ", email = "baezdevs@gmail.com" }
]
license = { text = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "babel>=2.17.0",
    "better-profanity>=0.7.0",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-mailman>=1.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.1",
    "python-slugify>=8.0.4",
    "python-usernames>=1.1.0",
    "pytz>=2025.2",
    "tzdata>=2025.2",
    "waitress>=3.0.2",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
